Updated all the group commands
